--- a/RunFor10h01/RunFor10h01.vcxproj.filters
+++ b/RunFor10h01/RunFor10h01.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="VisibleGameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameOverScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -90,6 +93,9 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="VisibleGameObject.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GameOverScreen.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
